--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   shimmer:
-  lottie:
+  lottie: ^2.2.0
   google_nav_bar:
   eva_icons_flutter:
   http:
@@ -54,9 +54,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/images/
+
     - assets/icons/
-    - assets/lottie/
+
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
