--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,13 +24,14 @@ dependencies:
   flutter:
     sdk: flutter
   shimmer:
-  lottie: ^2.2.0
+  lottie:
   google_nav_bar:
   eva_icons_flutter:
   http:
   path:
   sqflite:
   rive:
+  provider: ^6.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
